Init new layout (Jekyll)

--- a/_includes/heading.html
+++ b/_includes/heading.html
@@ -9,7 +9,7 @@
 <!-- Page Content -->
 <div class="container">
 	<ol class="breadcrumb">
-		<li class="breadcrumb-item"><a href="/">Start Bootstrap</a></li>
+		<li class="breadcrumb-item"><a href="/">Kosmos Mobile</a></li>
 		<li class="breadcrumb-item active">{{ page.title }}</li>
 	</ol>
 
