--- a/css/main.scss
+++ b/css/main.scss
@@ -39,5 +39,7 @@ $brand-google-plus:			#dd4b39;
 	"sections/search",
 	"sections/resources",
 	"sections/posts",
-	"sections/footer"
+	"sections/footer",
+  "landing"
 ;
+
