--- a/_sass/sections/_footer.scss
+++ b/_sass/sections/_footer.scss
@@ -3,7 +3,7 @@ footer {
         color: white;
         background-color: $brand-primary;
         padding: 50px 0;
-        @include background-texture;
+        @include background-texture-mountain;
         .input-group {
             max-width: 500px;
             margin: 30px auto 0;
