--- a/_sass/sections/_index.scss
+++ b/_sass/sections/_index.scss
@@ -1,3 +1,8 @@
+.marquee > .container-fluid {
+  padding-top: 111px;
+  padding-bottom: 111px;
+}
+
 header.marquee {
     color: white;
     text-align: center;
@@ -22,7 +27,7 @@ header.marquee {
     }
     a.marquee-img {
         display: inline-block;
-        margin: 35px auto 0;
+        margin: 20px auto 0;
         img {
             border-radius: 4px;
             border: 1px solid rgba(0, 0, 0, .4);
@@ -41,7 +46,7 @@ header.marquee {
         }
     }
     @media(min-width: 992px) {
-        padding: 125px 0;
+        padding: 100px 0;
         .marquee-brand {
             font-size: 6rem;
             line-height: 7rem;
