--- a/_sass/sections/_footer.scss
+++ b/_sass/sections/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     .footer-mailchimp {
+        height: 300px;
         color: white;
         background-color: $brand-primary;
         padding: 50px 0;
