--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,9 +11,11 @@
             <ul class="navbar-nav mr-auto">
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item"> <a class="nav-link" href="#">HOME</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">FEATURES</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">FAQ</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="/">HOME</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="/features">FEATURES</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="/faq">FAQ</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="/rates">RATES</a> </li>
+                
             </ul>
         </div>
     </div>
