--- a/_sass/sections/_index.scss
+++ b/_sass/sections/_index.scss
@@ -3,6 +3,10 @@
   padding-bottom: 111px;
 }
 
+.phone-dialer {
+
+}
+
 header.marquee {
     color: white;
     text-align: center;
@@ -26,12 +30,14 @@ header.marquee {
         }
     }
     a.marquee-img {
+        position: relative;
+        bottom: 0;
         display: inline-block;
         margin: 20px auto 0;
-        img {
-            border-radius: 4px;
-            border: 1px solid rgba(0, 0, 0, .4);
-            box-shadow: 0 0 10px 5px rgba(0, 0, 0, .4);
+    }
+    @media(max-width: 554px) {
+        .cell {
+            width:80%;
         }
     }
     @media(min-width: 768px) {
