added eula, privacy, license pages and limit home page image to 450px

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,13 @@
             
             <a href="/faq">FAQ</a> |
             
-            <a href="/rates">RATES</a>
+            <a href="/rates">RATES</a> |
+
+            <a href="/privacy">PRIVACY</a> |
+
+            <a href="/eula">EULA</a> |
+
+            <a href="/license">LICENSE</a>
             
         </div>
     </div>
