--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -202,11 +202,30 @@ section.page {
     }
 }
 
-
 .bd-pageheader {
     padding: 2rem 15px;
     margin-bottom: 1.5rem;
     color: GhostWhite;
     text-align: left;
     background-color: #00AEDF;
+}
+
+.eula, .key, .privacy {
+    font-size: 15px
+}
+
+.privacy h1, .privacy h2, .privacy h3, .eula h1, .eula h2, .eula h3 {
+    font-size: 20px
+}
+
+.privacy h4, .key h4 {
+    font-size: 18px
+}
+
+.privacy h5, .privacy h6, .key h5, .key h6 {
+    font-size: 17px
+}
+
+.phones, .cell {
+    max-height: 450px;
 }
