--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ page.meta-description }}">
-    <meta name="author" content="Kosmosmobile">
+    <meta name="author" content="Kosmos Mobile">
     <meta name="google-site-verification" content="hq9-_keIZdTZt7arZ91T-gSqn8ANii362mlcn0zCgno">
     <title>{{ page.meta-title }}</title>
     <!-- Google+ Authorship -->
